added home link in package

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://avinash2222.github.io/All_In_One_React",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
