added home link in package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://avinash2222.github.io/All_In_One_React",
-  "name": "calculator",
+  "name": "All_In_One_React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
