--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
+    "mobx": "^6.1.7",
+    "mobx-react-lite": "^3.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
