--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
